Section 01 content added. Sea imgs downloaded.

--- a/index.html
+++ b/index.html
@@ -9,21 +9,23 @@
 </head>
 <body>
     <div class="header">
-       
-           <div class="lefthead">
-            <ul>
+        <div class="lefthead">
+        <ul>
         <li>Header Logo</li>
-            </div>
-            <div class="righthead">
+        </div>
+        <div class="righthead">
         <li><a href="">header link one</a> </li>
         <li><a href="">header link two</a> </li>
         <li><a href="">header link three</a> </li>
-            </div>
+        </div>
        </ul>
     </div>
 
     <div class="section01">
-        
+        <div class="title">This website is awesome</div>
+        <div class="text01">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
+        <button class="signup">Sign up</button>
+        <img class="sea01" src="./imgs/sea01.jpg" alt="a close up image of the sea from above">
     </div>
 
     <div class="section02">
