Basic styling added to section 01

--- a/index.html
+++ b/index.html
@@ -22,10 +22,14 @@
     </div>
 
     <div class="section01">
+        <div class="left01">
         <div class="title">This website is awesome</div>
         <div class="text01">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
         <button class="signup">Sign up</button>
+        </div>
+        <div class="right01">
         <img class="sea01" src="./imgs/sea01.jpg" alt="a close up image of the sea from above">
+        </div>
     </div>
 
     <div class="section02">
