basic styling added to section 02

--- a/index.html
+++ b/index.html
@@ -34,17 +34,23 @@
 
     <div class="section02">
         <div class="title02">Some random information</div>
+        <div class="content02">
         <div class="info02">
             <img class="sea" src="./imgs/sea02.jpg" alt="a dark blue image of the sea and horizon">
+            <div class="text02">this is some subtext under an illustration or image</div>
         </div>
         <div class="info02">
             <img class="sea" src="./imgs/sea03.jpg" alt="a light blue image of the sea and horizon">
+            <div class="text02">this is some subtext under an illustration or image</div>
         </div>
         <div class="info02">
             <img class="sea" src="./imgs/sea04.jpg" alt="an image of many blue, white and green luminescent jelly fish">
+            <div class="text02">this is some subtext under an illustration or image</div>
         </div>
         <div class="info02">
             <img class="sea" src="./imgs/sea05.jpg" alt="an image of large white jellyfish with long tentacles">
+            <div class="text02">this is some subtext under an illustration or image</div>
+        </div>
         </div>
 
 
