--- a/index.html
+++ b/index.html
@@ -66,6 +66,11 @@
     </div>
 
     <div class="section04">
+        <div class="main04">
+            <div class="title04">Call to action! It's time!</div>
+            <div class="content04">Sign up for our products by clicking the button right over there!</div>
+            <button class="signup04">Sign up</button>
+        </div>
         
     </div>
 
