Basic styling added to section 04

--- a/index.html
+++ b/index.html
@@ -67,9 +67,13 @@
 
     <div class="section04">
         <div class="main04">
+            <div class="left04">
             <div class="title04">Call to action! It's time!</div>
             <div class="content04">Sign up for our products by clicking the button right over there!</div>
+            </div>
+            <div class="right04">
             <button class="signup04">Sign up</button>
+            </div>
         </div>
         
     </div>
